# solana-noir-verifier

./: .gitignore  Cargo.toml  README.md  SPEC.md  TESTING.md  claude.md  generated_vk.rs  package-lock.json  tasks.md  txtx.yml
.cursor/: mcp.json
.cursor/rules/: development.mdc  references.mdc  ultrahonk-development.mdc  ultrahonk-references.mdc  ultrahonk-workflow.mdc  ultraplonk-development.mdc.disabled  ultraplonk-references.mdc.disabled  ultraplonk-workflow.mdc.disabled  workflow.mdc
.github/workflows/: ci.yml  surfpool-test.yml
crates/plonk-core/: Cargo.toml
crates/plonk-core/src/: constants.rs  debug.rs  errors.rs  field.rs  key.rs  lib.rs  ops.rs  proof.rs  relations.rs  shplemini.rs  sumcheck.rs  transcript.rs  types.rs  verifier.rs
crates/rust-sdk/: Cargo.toml  README.md
crates/rust-sdk/examples/: test_phased.rs
crates/rust-sdk/src/: client.rs  error.rs  instructions.rs  lib.rs  types.rs
crates/verifier-cpi/: Cargo.toml  README.md
crates/verifier-cpi/src/: lib.rs
crates/vk-codegen/: Cargo.toml
crates/vk-codegen/src/: main.rs
docs/: bpf-limitations.md  knowledge.md  solana-testing.md  suggested-optimizations.md  theory.md
examples/sample-integrator/: Cargo.toml  README.md
examples/sample-integrator/src/: lib.rs
experiments/: README.md
experiments/groth16-alternative/: README.md  TESTING.md  run-experiment.sh
experiments/groth16-alternative/benchmarks/: results.md
experiments/groth16-alternative/gnark/: Makefile  benchmark.go  benchmark_circuits.go  circuit.go  go.mod  main.go
experiments/groth16-alternative/gnark/output/: proof.hex  vk_rust.rs
experiments/groth16-alternative/noir-gnark/: README.md  prove.sh  setup.sh
experiments/groth16-alternative/scripts/: package-lock.json  package.json  verify.mjs  verify.sh
experiments/groth16-alternative/solana-verifier/: Cargo.toml
experiments/groth16-alternative/solana-verifier/runbooks/: README.md
experiments/groth16-alternative/solana-verifier/runbooks/deployment/: main.tx
experiments/groth16-alternative/solana-verifier/src/: lib.rs
experiments/groth16-alternative/solana-verifier/tests/: integration_test.rs
experiments/zkverify-compression/: LOCAL_ALTERNATIVES.md  README.md  TESTING.md
experiments/zkverify-compression/circuits/hello_world/: Nargo.toml  Prover.toml
experiments/zkverify-compression/circuits/hello_world/src/: main.nr
experiments/zkverify-compression/output/: attestation.json  zkv_proof.hex  zkv_vk.hex
experiments/zkverify-compression/scripts/: .env  0-create-wallet.mjs  1-generate-proof.sh  2-convert-hex.sh  3-submit-relayer.mjs  3-submit-zkverify.mjs  4-verify-solana.mjs  env-example.txt  package-lock.json  package.json
programs/example-verifier/: Cargo.toml
programs/example-verifier/src/: lib.rs
programs/example-verifier/tests/: integration_test.rs
programs/ultrahonk-verifier/: Cargo.toml  build.rs  txtx.yml
programs/ultrahonk-verifier/runbooks/: README.md
programs/ultrahonk-verifier/runbooks/deployment/: main.tx
programs/ultrahonk-verifier/src/: lib.rs  phased.rs
programs/ultrahonk-verifier/tests/: integration_test.rs
runbooks/: README.md
runbooks/deployment/: main.tx
scripts/: build-circuit-verifier.sh  validate_theory.py
scripts/solana/: debug_cu.mjs  measure_cu.mjs  package-lock.json  package.json  test_phased.mjs  verify.mjs
sdk/: README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  index.ts  instructions.ts  types.ts
test-circuits/: README.md  build_all.sh
test-circuits/fib_chain_100/: Nargo.toml  Prover.toml
test-circuits/fib_chain_100/src/: main.nr
test-circuits/hash_batch/: Nargo.toml  Prover.toml
test-circuits/hash_batch/src/: main.nr
test-circuits/iterated_square_100/: Nargo.toml  Prover.toml
test-circuits/iterated_square_100/src/: main.nr
test-circuits/iterated_square_1000/: Nargo.toml  Prover.toml
test-circuits/iterated_square_1000/src/: main.nr
test-circuits/iterated_square_100k/: Nargo.toml  Prover.toml
test-circuits/iterated_square_100k/src/: main.nr
test-circuits/iterated_square_10k/: Nargo.toml  Prover.toml
test-circuits/iterated_square_10k/src/: main.nr
test-circuits/merkle_membership/: Nargo.toml  Prover.toml
test-circuits/merkle_membership/src/: main.nr
test-circuits/sapling_spend/: Nargo.toml  Prover.toml  README.md
test-circuits/sapling_spend/src/: main.nr
test-circuits/simple_square/: Nargo.toml
test-circuits/simple_square/src/: main.nr
