[workspace]
resolver = "2"
members = [
    "crates/plonk-core",
    "crates/vk-codegen",
    "crates/verifier-cpi",
    "examples/sample-integrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/solana-noir-verifier"

[workspace.dependencies]
# Solana (Anza SDK v3.x - Dec 2024)
# BN254 syscalls active on mainnet since Solana 1.18
solana-program = "3.0"
solana-sdk = "3.0"
solana-program-test = "3.1"
solana-bn254 = "3.1"

# Hashing (Keccak256 for Fiat-Shamir, matches Barretenberg)
sha3 = "0.10"

# Serialization
borsh = "1.5"

# Utils
thiserror = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Testing
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
