[package]
name = "plonk-solana-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UltraPlonk verifier for Noir proofs on Solana"

[features]
default = ["sha3"]
debug = []                        # Enable debug logging for challenge validation
solana = ["solana-keccak-hasher"] # Use syscall-based Keccak

[dependencies]
# Solana BN254 syscalls
solana-bn254 = { workspace = true }

# Hashing (Keccak256 for Fiat-Shamir transcript)
# Use solana-keccak-hasher on Solana for syscall-based hashing
solana-keccak-hasher = { version = "3.1", optional = true }
# Use sha3 for off-chain testing
sha3 = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }

# Hex literals for constants
hex-literal = "0.4"

[dev-dependencies]
hex = { workspace = true }
# Arkworks only for generating test vectors / cross-checking
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
