[package]
name = "solana-noir-verifier-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for verifying Noir UltraHonk proofs on Solana"
keywords = ["solana", "noir", "zk-proof", "ultrahonk", "verification"]
categories = ["cryptography", "blockchain"]

[dependencies]
# Solana
solana-sdk = { workspace = true }
solana-client = "3.1"
solana-system-interface = { version = "3.0", features = ["bincode"] }
solana-commitment-config = "3.1"
solana-rpc-client-api = "3.1"

# Hashing (for PDA derivation)
sha3 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
log = "0.4"

[dev-dependencies]
tokio = { workspace = true }
env_logger = "0.11"

[[example]]
name = "test_phased"
path = "examples/test_phased.rs"
