[package]
name = "solana-noir-verifier-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK and CLI for verifying Noir UltraHonk proofs on Solana"
keywords = ["solana", "noir", "zk-proof", "ultrahonk", "verification"]
categories = ["cryptography", "blockchain", "command-line-utilities"]

[dependencies]
# Solana
solana-sdk = { workspace = true }
solana-client = "3.1"
solana-system-interface = { version = "3.0", features = ["bincode"] }
solana-commitment-config = "3.1"
solana-rpc-client-api = "3.1"

# Hashing (for PDA derivation)
sha3 = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI (optional, only for binary)
clap = { version = "4.5", features = ["derive", "env"], optional = true }
indicatif = { version = "0.17", optional = true }
console = { version = "0.15", optional = true }
dirs = { version = "5.0", optional = true }
toml = { version = "0.8", optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
cli = ["clap", "indicatif", "console", "dirs", "toml", "serde"]

[[bin]]
name = "noir-solana"
path = "src/bin/noir-solana/main.rs"
required-features = ["cli"]

[[example]]
name = "test_phased"
path = "examples/test_phased.rs"
