[package]
name = "groth16-verifier"
version = "0.1.0"
edition = "2021"
description = "Solana Groth16 verifier using groth16-solana"

# Keep this package out of the parent workspace
[workspace]
members = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Groth16 verifier using Solana's alt_bn128 syscalls
groth16-solana = "0.2"

# Solana (Anza SDK v3.x - Dec 2024)
solana-program = "3.0"

[dev-dependencies]
solana-program-test = "3.1"
solana-sdk = "3.0"
tokio = { version = "1", features = ["rt", "macros"] }
hex = "0.4"

[features]
no-entrypoint = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
